# vim3_npu_applications_lite

yolov8n_demo_x11_usb/: .gitignore  CMakeLists.txt  main.cpp  post_process.ipynb  yolov8n_process.c
yolov8n_demo_x11_usb/nn_data/: yolov8n.nb
